fix: zamockowane notyfikacje na potrzeby mobile testów
